--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -1,8 +1,8 @@
-﻿[INFO]
-ID=0x0409
-Name=Bulgarian
-Version=2.5.3
-Author=
+[INFO]
+ID=0x0402
+Name=Bulgarian(Български)
+Version=2.6.1
+Author=jekovcar
 1=ОК
 2=Отказ
 
@@ -13,7 +13,7 @@ Author=
 0=Относно Xreveal
 
 [DIALOG_3]
-0=Xразкриване
+0=Xreveal
 1=Отчет
 2=Затвори
 
@@ -43,6 +43,11 @@ Author=
 7=&Автоматична проверка за актуализации
 8=Активирай &LibreDrive за UHD
 9=Активирай &облачно декриптиране
+10=Показвай прозореца винаги &отгоре
+11=Използвай &AES хардуерно ускорение
+12=<a>Benchmark</a>
+13=&Присъединяване към програмата за подобрения от клиенти
+14=<a>Check now</a>
 
 [DIALOG_9]
 0=CD
@@ -52,7 +57,7 @@ Author=
 0=DVD
 3=Премахни CSS (Система кодиране на съдържание)
 4=Премахни RC (Регионален код)
-5=Премахни RCE (Подобряване на регионален код)
+5=Премахни RCE (Подобрен регионален код)
 6=Регионален код на диска:
 7=Премахни APS (Система аналогова защита)
 8=Премахни UOP (Забрани потребителски операции)
@@ -69,14 +74,15 @@ Author=
 9=Премахни CCI (Инфо контрол за копиране)
 10=Деактивирай BD-Live
 11=Симулирай подключен 3D дисплей
+12=Преименуване на папки
 
 [DIALOG_12]
 0=KeyDB
 3=Xreveal не съдържа ключове за декриптиране, ще ви трябва база данни с ключове, за да работи. <a>За повече подробности</a>.
-4=KEYDB.cfg местоположение
-5=BD+ FUT местоположение (коригиращ масива).
-7=...
-8=...
+4=KeyDB.cfg местоположение
+5=FUT местоположение
+6=Посочете местоположение на KeyDB.cfg, за премахване AACS защита, което не се изисква за <a>Pro версия</a>.
+7=Посочете местоположение на FUT (Fix Up Table), за премахване BD+ защита, което не се изисква за <a>Pro версия</a>.
 
 [DIALOG_13]
 0=Изключения
@@ -89,7 +95,7 @@ Author=
 3=&Изходно устройство:
 4=&Целеви файл:
 5=Запази защитата
-6=...
+6=&Провери хеша на съдържанието
 
 [DIALOG_15]
 0=Извличане на твърд диск...
@@ -97,7 +103,6 @@ Author=
 2=Спри
 3=&Изходно устройство:
 4=&Целева директория:
-6=...
 
 [DIALOG_16]
 0=Регион за плейър
@@ -109,9 +114,9 @@ Author=
 5=Плътни
 
 [DIALOG_18]
-0=Въведете лицензен ключ
+0=Регистрация на Xreveal
 3=Помощ
-4=Моля, въведете вашия лицензен ключ по-долу.\nМожете също да поставите цялото лицензно имейл съобщение или да пуснете файла с лицензния ключ тук.
+4=Поставете лицензионния ключ, който сте получили, в полето по-долу.
 
 [DIALOG_19]
 0=Бързи клавиши
@@ -126,7 +131,17 @@ Author=
 4=Премахни първо възпроизв. заглавие
 5=Премахни UOPs (забрани потребителски операции)
 6=Премахни родителски ограничения
-7=KEYDB.cfg местоположение
+7=KeyDB.cfg местоположение
+8=Посочете местоположение на KeyDB.cfg за премахване на AACS защитата, което не се изисква за <А>Pro версия</а>.
+
+[DIALOG_21]
+0=Моите дискове
+
+[DIALOG_22]
+1=Да
+2=Не
+3=Регистрация
+4=Няма ключове за декриптиране в KeyDB.cfg. Ще пробвате ли облачната функцията за декриптиране?
 
 [DIALOG_A]
 0=Актуализация софтуер
@@ -181,7 +196,7 @@ Author=
 25=Процесът е завършен успешно!
 26=Няма намерен ключ за дешифриране в {%s}. За повече информация, моля, щракнете върху {%s}.
 27=Не е намерен BD+ FUT. За повече информация, моля, щракнете върху {%s}.
-28=Xreveal не успя да отвори устройство %C.\r\nГрешка: %s
+28=Xreveal неуспешно отваряне на диска, код на грешка: %s.
 29=Диск
 30=Доставчик
 31=Продукт
@@ -210,7 +225,7 @@ Author=
 54=&Зареди
 55=&Свойства
 56=Няма
-57=Тази програма е безплатна.\n\nАко тази програма е полезна за вас, можете да направите <a>дарение</a>, за да ни помогнете да я подобрим.
+57=Използвате безплатната версия, <a>надстройте до Pro</a>, за да отключите допълнителни функции.
 58=%s вече съществува.\nИскате ли да го замените?
 59=Сигурни ли сте, че искате да отмените?
 60=Регион на Blu-ray плейър
@@ -219,11 +234,34 @@ Author=
 63=Остават промени
 64=Регион %C
 65=&Винаги отгоре
-66=&Дарение
-67=Лицензирано до %s\r\nМаксимум потребители: %d\r\nБезплатни актуализации до: %s
+66=&Закупуване
+67=Лиценз на %s\r\nМаксимум потребители: %d\r\nПериод на безплатни актуализации: %s
 68=Завинаги
-69=Регистрирай
+69=&Регистрация...
 70=Благодаря за регистрацията!
 71=Въведеният регистрационен ключ е невалиден.
 72=Няма диск
 73=Нулирай ВСИЧКИ опции до подразбиране?\n\nЩракване върху „Не“ просто ще нулира опциите на текущата страница.
+74=RowId
+75=Статус
+76=Етикет
+77=Тип
+78=Капацитет
+79=Дата
+80=Диск ID
+81=Дата на добавяне
+82=MKB
+83=Основен плейлист
+84=BDP дата
+85=
+86=VID
+87=MK
+88=VUK
+89=UK
+90=&Преглед
+91=&Изтрий "%s"
+92=Изтрий &Всички
+93=Сигурни ли сте, да изтрие "%s"?
+94=Сигурни ли сте, че искате да изтриете всички записи?
+95=Тази функция е налична само в <a>Pro версия</a>.
+96=&Опресни
